--- a/packages/twenty-website/package.json
+++ b/packages/twenty-website/package.json
@@ -14,6 +14,7 @@
     "database:generate:pg": "npx drizzle-kit generate:pg --config=src/database/drizzle-posgres.config.ts"
   },
   "dependencies": {
+    "next-runtime-env": "^3.2.2",
     "postgres": "^3.4.3"
   }
 }
