--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -17,6 +17,7 @@
     "@graphql-yoga/nestjs": "patch:@graphql-yoga/nestjs@2.1.0#./patches/@graphql-yoga-nestjs-npm-2.1.0-cb509e6047.patch",
     "@langchain/mistralai": "^0.0.24",
     "@langchain/openai": "^0.1.3",
+    "@monaco-editor/react": "^4.6.0",
     "@nestjs/cache-manager": "^2.2.1",
     "@nestjs/devtools-integration": "^0.1.6",
     "@nestjs/graphql": "patch:@nestjs/graphql@12.1.1#./patches/@nestjs+graphql+12.1.1.patch",
@@ -34,6 +35,7 @@
     "lodash.omitby": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
+    "monaco-editor": "^0.50.0",
     "passport": "^0.7.0",
     "psl": "^1.9.0",
     "tsconfig-paths": "^4.2.0",
