feat: created by email calendar (#6536)
This PR is a followup of #6324 to add support of EMAIL and CALENDAR
source for the created by composite field.

--- a/package.json
+++ b/package.json
@@ -192,7 +192,7 @@
     "tslib": "^2.3.0",
     "tsup": "^8.0.1",
     "type-fest": "4.10.1",
-    "typeorm": "^0.3.20",
+    "typeorm": "patch:typeorm@0.3.20#./packages/twenty-server/patches/typeorm+0.3.20.patch",
     "typescript": "5.3.3",
     "use-context-selector": "^2.0.0",
     "use-debounce": "^10.0.0",
