--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@aws-sdk/client-lambda": "^3.614.0",
     "@aws-sdk/client-s3": "^3.363.0",
     "@aws-sdk/credential-providers": "^3.363.0",
-    "@blocknote/core": "^0.15.3",
     "@blocknote/mantine": "^0.15.3",
     "@blocknote/react": "^0.15.3",
     "@chakra-ui/accordion": "^2.3.0",
@@ -259,6 +258,7 @@
     "@types/graphql-upload": "^8.0.12",
     "@types/jest": "^29.5.11",
     "@types/js-cookie": "^3.0.3",
+    "@types/js-levenshtein": "^1.1.3",
     "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.compact": "^3.0.9",
     "@types/lodash.debounce": "^4.0.7",
