--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "npx vite build && sh ./scripts/inject-runtime-env.sh",
-    "build:sourcemaps": "VITE_BUILD_SOURCEMAP=true NODE_OPTIONS=--max-old-space-size=4096 npx nx build",
+    "build:sourcemaps": "VITE_BUILD_SOURCEMAP=true VITE_DISABLE_TYPESCRIPT_CHECKER=true VITE_DISABLE_ESLINT_CHECKER=true NODE_OPTIONS=--max-old-space-size=4096 npx nx build",
     "start:prod": "NODE_ENV=production npx vite --host",
     "tsup": "npx tsup"
   },
