--- a/packages/twenty-server/project.json
+++ b/packages/twenty-server/project.json
@@ -22,7 +22,7 @@
     },
     "start": {
       "executor": "nx:run-commands",
-      "dependsOn": ["build"],
+      "dependsOn": ["typecheck", "build"],
       "options": {
         "cwd": "packages/twenty-server",
         "command": "NODE_ENV=development && nest start --watch"
