--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -41,6 +41,7 @@
     "passport": "^0.7.0",
     "psl": "^1.9.0",
     "tsconfig-paths": "^4.2.0",
+    "typeorm": "patch:typeorm@0.3.20#./patches/typeorm+0.3.20.patch",
     "zod-to-json-schema": "^3.23.1"
   },
   "devDependencies": {
