--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -15,6 +15,7 @@
     "typeorm": "../../node_modules/typeorm/.bin/typeorm"
   },
   "dependencies": {
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@graphql-yoga/nestjs": "patch:@graphql-yoga/nestjs@2.1.0#./patches/@graphql-yoga-nestjs-npm-2.1.0-cb509e6047.patch",
     "@langchain/mistralai": "^0.0.24",
     "@langchain/openai": "^0.1.3",
@@ -37,11 +38,13 @@
     "lodash.omitby": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
-    "monaco-editor": "^0.50.0",
+    "monaco-editor": "^0.51.0",
+    "monaco-editor-auto-typings": "^0.4.5",
     "passport": "^0.7.0",
     "psl": "^1.9.0",
     "tsconfig-paths": "^4.2.0",
     "typeorm": "patch:typeorm@0.3.20#./patches/typeorm+0.3.20.patch",
+    "unzipper": "^0.12.3",
     "zod-to-json-schema": "^3.23.1"
   },
   "devDependencies": {
@@ -59,6 +62,7 @@
     "@types/lodash.uniqby": "^4.7.9",
     "@types/lodash.upperfirst": "^4.3.7",
     "@types/react": "^18.2.39",
+    "@types/unzipper": "^0",
     "rimraf": "^5.0.5",
     "typescript": "5.3.3"
   },
