--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -52,6 +52,8 @@ SIGN_IN_PREFILLED=true
 # MESSAGE_QUEUE_TYPE=pg-boss
 # REDIS_HOST=127.0.0.1
 # REDIS_PORT=6379
+# REDIS_USERNAME=
+# REDIS_PASSWORD=
 # DEMO_WORKSPACE_IDS=REPLACE_ME_WITH_A_RANDOM_UUID
 # SERVER_URL=http://localhost:3000
 # WORKSPACE_INACTIVE_DAYS_BEFORE_NOTIFICATION=30
