Optimize sync, reset, seed commands to flush cache and to use less memory (#7034)
In this PR:
- removing ugprade-0.24 commands as we are releasing 0.30
- introducing cache:flush command
- refactoring upgrade command and sync-metadata command to use the
ActiveWorkspacesCommand so they consistently run on all workspaces or
selected workspaces

Fixes:
- clear localStorage on sign out
- fix missing workspaceMember in verify resolver
- do not throw on datasource already destroyed exception which can
happen with race condition when several resolvers are resolving in
parallel

--- a/packages/twenty-server/project.json
+++ b/packages/twenty-server/project.json
@@ -149,6 +149,7 @@
           "nx ts-node-no-deps -- ./scripts/truncate-db.ts",
           "nx ts-node-no-deps -- ./scripts/setup-db.ts",
           "nx database:migrate",
+          "nx command-no-deps -- cache:flush",
           "nx command-no-deps -- workspace:seed:dev"
         ],
         "parallel": false
