--- a/packages/twenty-server/project.json
+++ b/packages/twenty-server/project.json
@@ -11,6 +11,16 @@
         "commands": ["rimraf dist", "nest build --path ./tsconfig.build.json"]
       }
     },
+    "test:integration": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "packages/twenty-server",
+        "commands": [
+          "NODE_ENV=test nx database:reset > reset-logs.log && NODE_ENV=test nx jest --config ./jest-integration.config.ts"
+        ]
+      },
+      "parallel": false
+    },
     "build:packageJson": {
       "executor": "@nx/js:tsc",
       "options": {
@@ -108,12 +118,11 @@
         "command": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ../../node_modules/.bin/jest --runInBand"
       }
     },
-    "test:e2e": {
+    "jest": {
       "executor": "nx:run-commands",
-      "dependsOn": ["build"],
       "options": {
         "cwd": "packages/twenty-server",
-        "command": "./scripts/run-integration.sh"
+        "command": "jest"
       }
     },
     "database:migrate": {
@@ -136,6 +145,16 @@
         "commands": [
           "nx typeorm -- migration:revert -d src/database/typeorm/metadata/metadata.datasource",
           "nx typeorm -- migration:revert -d src/database/typeorm/core/core.datasource"
+        ],
+        "parallel": false
+      }
+    },
+    "generate:integration-test": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "packages/twenty-server",
+        "commands": [
+          "nx ts-node-no-deps -- ./scripts/generate-integration-tests/index.ts"
         ],
         "parallel": false
       }
