--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "@blocknote/react": "^0.15.3",
     "@codesandbox/sandpack-react": "^2.13.5",
     "@dagrejs/dagre": "^1.1.2",
-    "@docusaurus/core": "^3.1.0",
-    "@docusaurus/preset-classic": "^3.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@envelop/on-resolve": "^4.1.0",
@@ -77,13 +75,13 @@
     "class-transformer": "^0.5.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "danger-plugin-todos": "^1.3.1",
     "dataloader": "^2.2.2",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "debounce": "^2.0.0",
     "deep-equal": "^2.2.2",
-    "docusaurus-node-polyfills": "^1.0.0",
     "dompurify": "^3.0.11",
     "dotenv-cli": "^7.2.1",
     "drizzle-orm": "^0.29.3",
@@ -198,8 +196,6 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.24.6",
     "@crxjs/vite-plugin": "^1.0.14",
-    "@docusaurus/module-type-aliases": "^3.1.0",
-    "@docusaurus/tsconfig": "3.1.0",
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-codegen/typescript": "^3.0.4",
