--- a/packages/twenty-website/package.json
+++ b/packages/twenty-website/package.json
@@ -14,6 +14,8 @@
     "database:generate:pg": "npx drizzle-kit generate:pg --config=src/database/drizzle-posgres.config.ts"
   },
   "dependencies": {
+    "@docsearch/react": "^3.6.2",
+    "gray-matter": "^4.0.3",
     "next-runtime-env": "^3.2.2",
     "postgres": "^3.4.3"
   }
