--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twenty-front",
-  "version": "0.31.0-canary",
+  "version": "0.31.0",
   "private": true,
   "type": "module",
   "scripts": {
