--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -50,10 +50,7 @@ SIGN_IN_PREFILLED=true
 # SENTRY_FRONT_DSN=https://xxx@xxx.ingest.sentry.io/xxx
 # LOG_LEVELS=error,warn
 # MESSAGE_QUEUE_TYPE=pg-boss
-# REDIS_HOST=127.0.0.1
-# REDIS_PORT=6379
-# REDIS_USERNAME=
-# REDIS_PASSWORD=
+# REDIS_URL=redis://localhost:6379
 # DEMO_WORKSPACE_IDS=REPLACE_ME_WITH_A_RANDOM_UUID
 # SERVER_URL=http://localhost:3000
 # WORKSPACE_INACTIVE_DAYS_BEFORE_NOTIFICATION=30
