--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -43,7 +43,8 @@ jobs:
       - name: Front / Build storybook
         run: npx nx storybook:build twenty-front
   front-sb-test:
-    runs-on: shipfox-8vcpu-ubuntu-2204
+    runs-on: depot-ubuntu-22.04-8
+    timeout-minutes: 30
     needs: front-sb-build
     strategy:
       matrix:
@@ -68,7 +69,8 @@ jobs:
       - name: Run storybook tests
         run: npx nx storybook:serve-and-test:static twenty-front --configuration=${{ matrix.storybook_scope }}
   front-sb-test-performance:
-    runs-on: shipfox-8vcpu-ubuntu-2204
+    runs-on: depot-ubuntu-22.04-8
+    timeout-minutes: 30
     env:
       REACT_APP_SERVER_BASE_URL: http://localhost:3000
       NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
