--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -43,8 +43,34 @@ jobs:
       - name: Front / Build storybook
         run: npx nx storybook:build twenty-front
   front-sb-test:
-    runs-on: depot-ubuntu-22.04-8
-    timeout-minutes: 30
+    runs-on: ci-8-cores
+    timeout-minutes: 60
+    needs: front-sb-build
+    strategy:
+      matrix:
+        storybook_scope: [pages, modules]
+    env:
+      REACT_APP_SERVER_BASE_URL: http://localhost:3000
+      NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
+    steps:
+      - name: Fetch local actions
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        uses: ./.github/workflows/actions/yarn-install
+      - name: Install Playwright
+        run: cd packages/twenty-front && npx playwright install
+      - name: Front / Restore Storybook Task Cache
+        uses: ./.github/workflows/actions/task-cache
+        with:
+          tag: scope:frontend
+          tasks: storybook:build
+      - name: Front / Write .env
+        run: npx nx reset:env twenty-front
+      - name: Run storybook tests
+        run: npx nx storybook:serve-and-test:static twenty-front --configuration=${{ matrix.storybook_scope }}
+  front-sb-test-shipfox:
+    runs-on: shipfox-8vcpu-ubuntu-2204
+    timeout-minutes: 60
     needs: front-sb-build
     strategy:
       matrix:
@@ -69,8 +95,8 @@ jobs:
       - name: Run storybook tests
         run: npx nx storybook:serve-and-test:static twenty-front --configuration=${{ matrix.storybook_scope }}
   front-sb-test-performance:
-    runs-on: depot-ubuntu-22.04-8
-    timeout-minutes: 30
+    runs-on: ci-8-cores
+    timeout-minutes: 60
     env:
       REACT_APP_SERVER_BASE_URL: http://localhost:3000
       NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
