--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -23,6 +23,8 @@ jobs:
           access_token: ${{ github.token }}
       - name: Fetch local actions
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Check for changed files
         id: changed-files
@@ -38,7 +40,7 @@ jobs:
         run: echo "No relevant changes. Skipping CI."
 
       - name: Install dependencies
-        if: steps.changed-files.outputs.any_changed == 'true'
+        if: steps.changed-files.outputs.any_changed == 'true' 
         uses: ./.github/workflows/actions/yarn-install
       - name: Diagnostic disk space issue
         if: steps.changed-files.outputs.any_changed == 'true'
@@ -56,7 +58,6 @@ jobs:
         if: steps.changed-files.outputs.any_changed == 'true'
         run: npx nx storybook:build twenty-front
   front-sb-test:
-
     runs-on: ci-8-cores
     timeout-minutes: 60
     needs: front-sb-build
@@ -69,6 +70,8 @@ jobs:
     steps:
       - name: Fetch local actions
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Check for changed files
         id: changed-files
         uses: tj-actions/changed-files@v11
@@ -149,6 +152,8 @@ jobs:
     steps:
       - name: Fetch local actions
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Check for changed files
         id: changed-files
         uses: tj-actions/changed-files@v11
@@ -242,7 +247,7 @@ jobs:
         run: echo "No relevant changes. Skipping CI."
 
       - name: Install dependencies
-        if: steps.changed-files.outputs.any_changed == 'true' 
+        if: steps.changed-files.outputs.any_changed == 'true'
         uses: ./.github/workflows/actions/yarn-install
       - name: Front / Restore ${{ matrix.task }} task cache
         if: steps.changed-files.outputs.any_changed == 'true'
