--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -113,7 +113,8 @@ jobs:
     steps:
       - name: Fetch local actions
         uses: actions/checkout@v4
-
+        with:
+          fetch-depth: 0
       - name: Check for changed files
         id: changed-files
         uses: tj-actions/changed-files@v11
