Enable Tinybird CI (#8168)
Test to enable it in a second PR. I think it needed to merged in main
first

--- a/.github/workflows/ci-tinybird.yaml
+++ b/.github/workflows/ci-tinybird.yaml
@@ -1,11 +1,10 @@
 name: CI Tinybird
 on:
-  # Temporarily disabled
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
 
-  # pull_request:
+  pull_request:
     
 
 concurrency:
