--- a/.github/workflows/ci-tinybird.yaml
+++ b/.github/workflows/ci-tinybird.yaml
@@ -17,5 +17,5 @@ jobs:
     with:
         data_project_dir: packages/twenty-tinybird
     secrets:
-        tb_admin_token: ${{ secrets.TINYBIRD_ADMIN_TOKEN }} 
+        tb_admin_token: ${{ secrets.TB_ADMIN_TOKEN }} 
         tb_host: https://api.eu-central-1.aws.tinybird.co
