feat: generate secret function and replaced few instances (#7810)
This PR fixes #4588

---------

Co-authored-by: Félix Malfait <felix@twenty.com>
Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/.github/workflows/ci-test-docker-compose.yaml
+++ b/.github/workflows/ci-test-docker-compose.yaml
@@ -41,10 +41,7 @@ jobs:
         cp .env.example .env
         echo "Generating secrets..."
         echo "# === Randomly generated secrets ===" >>.env
-        echo "ACCESS_TOKEN_SECRET=$(openssl rand -base64 32)" >>.env
-        echo "LOGIN_TOKEN_SECRET=$(openssl rand -base64 32)" >>.env
-        echo "REFRESH_TOKEN_SECRET=$(openssl rand -base64 32)" >>.env
-        echo "FILE_TOKEN_SECRET=$(openssl rand -base64 32)" >>.env
+        echo "APP_SECRET=$(openssl rand -base64 32)" >>.env
         echo "POSTGRES_ADMIN_PASSWORD=$(openssl rand -base64 32)" >>.env
 
         echo "Starting server..."
