--- a/.github/workflows/ci-tinybird.yaml
+++ b/.github/workflows/ci-tinybird.yaml
@@ -5,7 +5,6 @@ on:
       - main
 
   pull_request:
-    
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -13,9 +12,23 @@ concurrency:
 
 jobs:
   ci:
-    uses: tinybirdco/ci/.github/workflows/ci.yml@main
-    with:
-        data_project_dir: packages/twenty-tinybird
-    secrets:
-        tb_admin_token: ${{ secrets.TB_ADMIN_TOKEN }} 
-        tb_host: https://api.eu-central-1.aws.tinybird.co
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check for changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v11
+        with:
+          files: |
+            package.json
+            packages/twenty-tinybird/**
+
+      - name: Skip if no relevant changes
+        if: steps.changed-files.outputs.any_changed == 'false'
+        run: echo "No relevant changes. Skipping CI."
+
+      - name: Check twenty-tinybird package
+        uses: tinybirdco/ci/.github/workflows/ci.yml@main
+        with:
+          data_project_dir: packages/twenty-tinybird
+          tb_admin_token: ${{ secrets.TB_ADMIN_TOKEN }}
+          tb_host: https://api.eu-central-1.aws.tinybird.co
