--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twenty-server",
-  "version": "0.32.0-canary",
+  "version": "0.32.0",
   "description": "",
   "author": "",
   "private": true,
