--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -7,6 +7,7 @@ FRONT_BASE_URL=http://localhost:3001
 APP_SECRET=replace_me_with_a_random_string
 SIGN_IN_PREFILLED=true
 
+ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
 
 # ———————— Optional ————————
 # PORT=3000
@@ -14,7 +15,6 @@ SIGN_IN_PREFILLED=true
 # DEBUG_PORT=9000
 # ACCESS_TOKEN_EXPIRES_IN=30m
 # LOGIN_TOKEN_EXPIRES_IN=15m
-# API_TOKEN_EXPIRES_IN=1000y
 # REFRESH_TOKEN_EXPIRES_IN=90d
 # FILE_TOKEN_EXPIRES_IN=1d
 # FRONT_AUTH_CALLBACK_URL=http://localhost:3001/verify
