--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -29,6 +29,7 @@ ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
 # AUTH_MICROSOFT_TENANT_ID=replace_me_with_azure_tenant_id
 # AUTH_MICROSOFT_CLIENT_SECRET=replace_me_with_azure_client_secret
 # AUTH_MICROSOFT_CALLBACK_URL=http://localhost:3000/auth/microsoft/redirect
+# AUTH_MICROSOFT_APIS_CALLBACK_URL=http://localhost:3000/auth/microsoft-apis/get-access-token
 # AUTH_GOOGLE_ENABLED=false
 # AUTH_GOOGLE_CLIENT_ID=replace_me_with_google_client_id
 # AUTH_GOOGLE_CLIENT_SECRET=replace_me_with_google_client_secret
