Fix typo in branch name (#8480)
Fixes #8471 

Updated `0.33.0-canaray` -> `0.33.0-canary`

![CleanShot 2024-11-13 at 09 45
36](https://github.com/user-attachments/assets/6a365542-9b4d-4279-9ef4-966d22863eba)

--- a/packages/twenty-emails/package.json
+++ b/packages/twenty-emails/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twenty-emails",
-  "version": "0.33.0-canaray",
+  "version": "0.33.0-canary",
   "description": "",
   "author": "",
   "private": true,
