--- a/packages/twenty-ui/package.json
+++ b/packages/twenty-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twenty-ui",
-  "version": "0.33.0-canaray",
+  "version": "0.33.0-canary",
   "type": "module",
   "main": "./src/index.ts",
   "exports": {
