--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -17,7 +17,6 @@ ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
 # LOGIN_TOKEN_EXPIRES_IN=15m
 # REFRESH_TOKEN_EXPIRES_IN=90d
 # FILE_TOKEN_EXPIRES_IN=1d
-# FRONT_AUTH_CALLBACK_URL=http://localhost:3001/verify
 # MESSAGING_PROVIDER_GMAIL_ENABLED=false
 # CALENDAR_PROVIDER_GOOGLE_ENABLED=false
 # IS_BILLING_ENABLED=false
@@ -75,3 +74,5 @@ ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
 # PG_SSL_ALLOW_SELF_SIGNED=true
 # SESSION_STORE_SECRET=replace_me_with_a_random_string_session
 # ENTERPRISE_KEY=replace_me_with_a_valid_enterprise_key
+# SSL_KEY_PATH="./certs/your-cert.key"
+# SSL_CERT_PATH="./certs/your-cert.crt"
