--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/passport-microsoft": "^1.0.3",
     "@wyw-in-js/vite": "^0.5.3",
+    "@xyflow/react": "^12.3.5",
     "add": "^2.0.6",
     "addressparser": "^1.0.1",
     "afterframe": "^1.0.2",
@@ -168,7 +169,6 @@
     "react-router-dom": "^6.4.4",
     "react-textarea-autosize": "^8.4.1",
     "react-tooltip": "^5.13.1",
-    "reactflow": "^11.11.3",
     "recoil": "^0.7.7",
     "rehype-slug": "^6.0.0",
     "remark-behead": "^3.1.0",
