--- a/packages/twenty-e2e-testing/.env.example
+++ b/packages/twenty-e2e-testing/.env.example
@@ -1,5 +1,5 @@
 # Note that provide always without trailing forward slash to have expected behaviour
-FRONTEND_BASE_URL=http://localhost:3001
+FRONTEND_BASE_URL=http://app.localhost:3001
 CI_DEFAULT_BASE_URL=https://demo.twenty.com
 DEFAULT_LOGIN=tim@apple.dev
 NEW_WORKSPACE_LOGIN=test@apple.dev
