Export Notes to PDF/Word Feature Implementation (#8439) (#9269)
Closes #8439

## Overview
This PR implements functionality to export notes/tasks to PDF and Word
formats.


https://github.com/user-attachments/assets/67eaf4eb-cabc-45ba-8727-13f22ba31067

## Testing
- [x] Verified that the export functionality works for both notes and
tasks, whether exporting immediately after opening the editor or after
editing.
- [x] Ensured the export button appears in the action menu only when the
object is a note/task.
- [x] Ensured the export button appears in the
RightDrawerActionMenuDropdown for a note/task.

## Notes
- The code already supports exporting to Word, but only PDF export is
currently available. To enable Word export, we just need a UI option
allowing users to choose between PDF and Word.
- After upgrading the Blocknote packages to the latest version,
dependency conflicts arose with tiptap and prosemirror-model. To address
this, all tiptap dependencies were consolidated in the root
package.json, and a resolution was added for prosemirror-model. Also,
some methods in CustomAddBlockItem.tsx were missing in the newer
version, so I updated the code to accommodate these changes.
- Exporting a note with an image works only if the image is embedded, as
Blocknote doesn’t support actual image uploads. Uploaded images are
omitted in the PDF export, while the text is retained.

---------

Co-authored-by: Félix Malfait <felix.malfait@gmail.com>
Co-authored-by: Félix Malfait <felix@twenty.com>

--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -30,17 +30,27 @@
     "workerDirectory": "public"
   },
   "dependencies": {
+    "@blocknote/xl-docx-exporter": "^0.22.0",
+    "@blocknote/xl-pdf-exporter": "^0.22.0",
     "@nivo/calendar": "^0.87.0",
     "@nivo/core": "^0.87.0",
     "@nivo/line": "^0.87.0",
-    "@tiptap/extension-document": "^2.9.0",
-    "@tiptap/extension-paragraph": "^2.9.0",
-    "@tiptap/extension-placeholder": "^2.9.0",
-    "@tiptap/extension-text": "^2.9.0",
-    "@tiptap/extension-text-style": "^2.8.0",
-    "@tiptap/react": "^2.8.0",
+    "@react-pdf/renderer": "^4.1.6",
+    "@tiptap/core": "^2.10.4",
+    "@tiptap/extension-document": "^2.10.4",
+    "@tiptap/extension-hard-break": "^2.10.4",
+    "@tiptap/extension-paragraph": "^2.10.4",
+    "@tiptap/extension-placeholder": "^2.10.4",
+    "@tiptap/extension-text": "^2.10.4",
+    "@tiptap/extension-text-style": "^2.10.4",
+    "@tiptap/react": "^2.10.4",
     "@xyflow/react": "^12.0.4",
     "buffer": "^6.0.3",
+    "docx": "^9.1.0",
+    "file-saver": "^2.0.5",
     "transliteration": "^2.3.5"
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2"
   }
 }
