--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@aws-sdk/client-lambda": "^3.614.0",
     "@aws-sdk/client-s3": "^3.363.0",
     "@aws-sdk/credential-providers": "^3.363.0",
-    "@blocknote/mantine": "^0.15.3",
-    "@blocknote/react": "^0.15.3",
+    "@blocknote/mantine": "^0.22.0",
+    "@blocknote/react": "^0.22.0",
     "@codesandbox/sandpack-react": "^2.13.5",
     "@dagrejs/dagre": "^1.1.2",
     "@emotion/react": "^11.11.1",
@@ -50,7 +50,6 @@
     "@stoplight/elements": "^8.0.5",
     "@swc/jest": "^0.2.29",
     "@tabler/icons-react": "^2.44.0",
-    "@tiptap/extension-hard-break": "^2.9.1",
     "@types/dompurify": "^3.0.5",
     "@types/facepaint": "^1.2.5",
     "@types/lodash.camelcase": "^4.3.7",
@@ -247,6 +246,7 @@
     "@types/chrome": "^0.0.267",
     "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.13",
+    "@types/file-saver": "^2.0.7",
     "@types/graphql-fields": "^1.3.6",
     "@types/graphql-upload": "^8.0.12",
     "@types/js-cookie": "^3.0.3",
@@ -346,7 +346,8 @@
   "resolutions": {
     "graphql": "16.8.0",
     "type-fest": "4.10.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "prosemirror-model": "1.23.0"
   },
   "version": "0.2.1",
   "nx": {},
